--- a/html/size/max_height.html
+++ b/html/size/max_height.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/plugins/image.css">
   <link rel="stylesheet" href="../../css/plugins/video.css">
   <link rel="stylesheet" href="../../css/plugins/table.css">
+  <link rel="stylesheet" href="../../css/plugins/fullscreen.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
 
@@ -55,6 +56,7 @@
   <script type="text/javascript" src="../../js/plugins/code_view.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/draggable.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/font_size.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/align.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/font_family.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/paragraph_style.min.js"></script>
